# obassh

./: .gitignore  .pylintrc  README.md  notes.txt  pyproject.toml
src/obassh/: __init__.py  main.py
src/obassh/app/: __init__.py  models.py  obassh.tcss  textual_app.py
src/obassh/app/controllers/: __init__.py  profile_targets_controller.py  session_controller.py
src/obassh/app/screens/: __init__.py  session_modals.py
src/obassh/app/services/: ssh_command_builder.py
src/obassh/connectors/: __init__.py  subprocess_ssh_transport.py
src/obassh/domain/: __init__.py  enums.py  errors.py  interfaces.py  models.py
src/obassh/plugins/: __init__.py  registry.py
src/obassh/providers/oci/: __init__.py  bastion_session_provider.py  inventory_provider.py
src/obassh/services/: __init__.py  command_preview_service.py  connection_service.py  discovery_service.py  orchestrator.py  port_forward_service.py  session_service.py
src/obassh/storage/: __init__.py
tests/: test_domain_models.py  test_oci_inventory_provider.py  test_plugin_registry.py  test_port_forward_service.py  test_profile_targets_controller.py  test_services_orchestrator.py  test_session_controller.py  test_session_service.py  test_ssh_command_builder.py  test_subprocess_ssh_transport.py
