[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obassh"
version = "0.1.0"
description = "OCI Bastion SSH orchestrator"
requires-python = ">=3.11"
dependencies = [
  "textual>=0.60",
  "oci>=2.0",
]

[project.scripts]
obassh = "obassh.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]